--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -36,6 +36,7 @@ $button-secondary-border-color: $grey;
 //header
 $header-bg: $brand-primary;
 $header-color: #ffffff;
+$header-height: 6rem;
 
 //item
 $item-bg: $light-grey;
@@ -45,5 +46,5 @@ $item-text-color: $dark-grey;
 //page content
 $page-content-sidebar-width: 30rem;
 $page-content-main-width: calc(#{$site-max-width} - #{$page-content-sidebar-width});
-
+$page-content-height: calc(100vh - #{$header-height});
 
