--- a/imports/client/styles/components/_item.scss
+++ b/imports/client/styles/components/_item.scss
@@ -1,3 +1,9 @@
+.item-list {
+    background-color: #ffffff;
+    border: 1px solid $grey;
+    overflow-y:  scroll;
+    width: 100%;
+}
 .item {
     background: $item-bg;
     border:1px solid $item-border;
