--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -3,10 +3,11 @@
     height: $page-content-height;
     margin: 0 auto;
     max-width: $site-max-width;
-    padding: $space;
+    padding: $large-space $space;
 }
 .page-content__sidebar{
     display: flex;
+    padding-right: $large-space;
     width: $page-content-sidebar-width;
 }
 .page-content__main{
